--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -22,6 +22,7 @@ nav {
     z-index: 2;
     top: 0;
     background-color: #222831;
+    scroll-margin-top: 100px;
 }
 
 nav ul {
@@ -38,8 +39,13 @@ nav ul {
     margin-right: 0;
 }
 
+.cycle-btn {
+    font-size: 4em;
+    color: #FF008E;
+}
+
 .link-item:hover {
-    color: #F30067;
+    color: #FF008E;
     text-decoration: none;
 }
 
@@ -49,7 +55,7 @@ nav ul {
 }
 
 .proj-link {
-    color: #0C1E7F;
+    color: #222831;
     font-weight: 900;
 }
 
@@ -110,7 +116,7 @@ nav ul {
 #about-me p {
     color: aliceblue;
     /* width: 100%; */
-    font-size: 1.25em;
+    font-size: 2em;
     /* margin-bottom: 0;   */
 }
 
@@ -120,24 +126,15 @@ nav ul {
     height: 100%;
 }
 
-#contact-form {
+/* #contact-form {
     display: flex;
     flex-direction: column; 
     justify-content: center;
     align-items: center;
     width: 100%;
-}
+} */
 
-#contact-form p input, label, textarea{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 5px;
-    color:#FF008E;
-}
+
 
 #contact-form {
     display: flex;
@@ -153,6 +150,28 @@ nav ul {
     top: -1%;
 }
 
+#contact-form p input, label, textarea{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 5px;
+    color:#FF008E;
+}
+
+#contact-form button {
+    outline: none;
+    background-color: #00D1CD;
+    border-radius: 5px;
+    height: 60px;
+    width: 150px;
+    color:  #FF008E;
+    font-size: 1.25em;
+    font-weight: bolder;
+}
+
 #contact-me {
     display: flex;
     align-items: center;
@@ -165,9 +184,12 @@ nav ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 875px;
-    margin-top: 135px;
+    height: 1000px;
+    margin-top: 90px;
     width: 100%;
+    background-image: url('../images/titlebgxl.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
     
 }
 
@@ -181,16 +203,25 @@ nav ul {
 
 #intro h3 {
     color: #F30067;
-    text-shadow: -4px -2px #00D1CD;
+    text-shadow: -4px -2px #00d1cd;
     font-size: 80px;
     margin: 40px;
+    position: relative;
+    bottom: 8%;
+}
+
+#intro img {
+    position: relative;
+    top: -6%;
 }
 
 #intro-inner {
+    position: relative;
+    top: 3%;
     background-image: linear-gradient(90deg, #F30067, #00D1CD);
     border-radius: 50%;
-    height: 800px;
-    width: 800px;
+    height: 750px;
+    width: 750px;
     text-align: center;
 }
 
@@ -198,8 +229,8 @@ nav ul {
     position: relative;
     background-color: #222831;
     border-radius: 50%;
-    height: 750px;
-    width: 750px;
+    height: 700px;
+    width: 700px;
     left: 3%;
     top: 3%;
 }
@@ -323,10 +354,14 @@ nav ul {
     left: 3%;
 }
 
+#proj-2 span:hover {
+    color: #F30067;
+}
+
 #proj-2 span {
     display: inline-block;
     position: relative;
-    font-size: 2.4em;
+    font-size: 2em;
     transform: rotate(270deg);
     text-align: center;
     top: 40%;
